<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/airQualityIndex"
        android:textAppearance="@style/TextAppearance" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/item_background"
        android:minHeight="@dimen/item_air_quality_height"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance"
            android:textSize="50sp"
            tools:text="8,5" />

        <ImageView
            android:id="@+id/buttonAirQualityInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/cs_about_air_quality_index"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:src="@drawable/ic_info_outline_white_36dp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/buttonTimeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/cs_measurement_history_graphs"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:src="@drawable/ic_timeline_white_36dp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewIndexValue"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/airIndicator"
                android:layout_width="10sp"
                android:layout_height="10sp"
                android:layout_marginRight="4dp"
                android:alpha="0.5"
                android:src="@drawable/shape_oval"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textViewAirQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance"
                android:textSize="16sp"
                tools:text="bardzo dobra jakość powietrza" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewMeasureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance"
        tools:text="zmierzono 5 minut temu" />

</LinearLayout>